[AMQ-8354] Fixed sequence recovery.